# advanced_compiling_techniques_assignments

./: .gitignore  ASTInterpreter.cpp  Environment.cpp  Environment.h  README.md  run_tests.sh
assign2/: LLVMAssignment.cpp  README.md  run_test.sh
assign3/: CMakeLists.txt  Dataflow.h  LLVMAssignment.cpp  Liveness.h  PointsTo.h  PointsTo_old.h  README.md  run_test.sh
assign3/test/: test30.c  test31.c  test32.c  test33.c  test34.c
ast-interpreter/: CMakeLists.txt  README.md  run_test.sh
ast-interpreter/test/: test20.c
llvm-pass/: CMakeLists.txt  LLVMAssignment.cpp  README.md  run_test.sh
llvm-pass/test/: test14.c
test/: test21.c
